<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, V2W!</string>
    <string name="app_name">V2W</string>
    <string name="name">账户</string>
    <string name="Pwd">密码</string>
    <string name="Enter">登陆</string>
    <string name="Title">录音主题</string>
    <string name="content">录音内容</string>
    <string name="save">保存  </string>
    <string name="shareTitle">分享文本</string>
    <string name="deleteTitle">删除文本</string>
    <string name="lookTitle">查看文本</string>
    <string name="detitle">请输入你要删除的Title</string>
    <string name="delete">删除  </string>
    <string name="look">查看  </string>
    <string name="dialog_two_title">题目和内容不能为空！</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="title_activity_chat_activity2">ChatActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
