<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/name"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black1"
            android:layout_width="40dp" />

        <EditText
            android:id="@+id/etUid"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="请输入账号"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="40dp"
            android:text="@string/Pwd"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black1"
            ></TextView>

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="请输入密码"
            android:singleLine="true" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <Button
            android:text="@string/Enter"
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_width="67dp"></Button>
            <Button
            android:text="注册  "
            android:id="@+id/register"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_width="67dp"></Button>
    </LinearLayout>
</LinearLayout>