<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/createtext">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2px"
            
            android:text="@string/Title" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入录音主题"
             />

    </LinearLayout>

       

    
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
        android:id="@+id/luyin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="录音" 
        android:drawableLeft="@drawable/lu"/>
<EditText
        android:id="@+id/luyinkuang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
      
    </LinearLayout>
    <Button
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加至录音内容" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="194dp"
        android:gravity="top"
        android:hint="点击录音按钮快速记录你的想法吧~"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Button
            android:id="@+id/confirm"
            android:text="@string/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/look"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="保存并查看 " />
    </LinearLayout>

    

</LinearLayout>